removed databinding scripts taken from saving system

--- a/Runtime/com.bodardr.databinding.asmdef
+++ b/Runtime/com.bodardr.databinding.asmdef
@@ -1,6 +1,6 @@
 {
   "name": "com.bodardr.databinding",
-  "rootNamespace": "Bodardr.databinding",
+  "rootNamespace": "Bodardr.Databinding",
   "references": [
     "Unity.TextMeshPro"
   ],
