- Added Component Menus - Added Databinding (first pass) - Windows, Binding and Weaving - Adjusted Interaction System - Adjusted Object Pooling (Now more general and QoL)
Signed-off-by: Roman B <romain.bodard@videotron.ca>

--- a/Runtime/com.bodardr.databinding.runtime.asmdef
+++ b/Runtime/com.bodardr.databinding.runtime.asmdef
@@ -1,8 +1,10 @@
 {
-  "name": "com.bodardr.databinding",
-  "rootNamespace": "Bodardr.Databinding",
+  "name": "com.bodardr.databinding.runtime",
+  "rootNamespace": "Bodardr.Databinding.Runtime",
   "references": [
-    "Unity.TextMeshPro"
+    "Unity.TextMeshPro",
+    "Weaver",
+    "com.bodardr.pooling"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
@@ -11,6 +13,7 @@
   "precompiledReferences": [],
   "autoReferenced": true,
   "defineConstraints": [],
-  "versionDefines": [],
+  "versionDefines": [
+  ],
   "noEngineReferences": false
 }
