--- a/Runtime/com.bodardr.databinding.runtime.asmdef
+++ b/Runtime/com.bodardr.databinding.runtime.asmdef
@@ -4,6 +4,7 @@
   "references": [
     "Unity.TextMeshPro",
     "Weaver",
+    "com.bodardr.utility.runtime",
     "com.bodardr.pooling"
   ],
   "includePlatforms": [],
