New UI - First passes Login, Register, Reset Pincode, Shop (MXP and Resources), Transfer MITA, Settings, Marketplace, Minigames and Mystery Chest

--- a/Editor/com.bodardr.databinding.editor.asmdef
+++ b/Editor/com.bodardr.databinding.editor.asmdef
@@ -1,20 +1,21 @@
 {
-  "name": "com.bodardr.databinding.editor",
-  "rootNamespace": "Bodardr.Databinding.Editor",
-  "references": [
-    "Unity.TextMeshPro",
-    "Weaver",
-    "com.bodardr.databinding.runtime"
-  ],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "com.bodardr.databinding.editor",
+    "rootNamespace": "Bodardr.Databinding.Editor",
+    "references": [
+        "Unity.TextMeshPro",
+        "com.bodardr.databinding.runtime",
+        "com.bodardr.utility.editor",
+        "com.bodardr.utility.runtime"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
