--- a/Runtime/com.bodardr.databinding.runtime.asmdef
+++ b/Runtime/com.bodardr.databinding.runtime.asmdef
@@ -1,18 +1,18 @@
 {
-    "name": "com.bodardr.databinding.runtime",
-    "rootNamespace": "Bodardr.Databinding.Runtime",
-    "references": [
-        "Unity.TextMeshPro",
-        "com.bodardr.utility.runtime",
-        "com.bodardr.pooling"
-    ],
-    "includePlatforms": [],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+  "name": "com.bodardr.databinding.runtime",
+  "rootNamespace": "Bodardr.Databinding.Runtime",
+  "references": [
+    "Unity.TextMeshPro",
+    "com.bodardr.utility.runtime",
+    "com.bodardr.pooling"
+  ],
+  "includePlatforms": [],
+  "excludePlatforms": [],
+  "allowUnsafeCode": true,
+  "overrideReferences": false,
+  "precompiledReferences": [],
+  "autoReferenced": true,
+  "defineConstraints": [],
+  "versionDefines": [],
+  "noEngineReferences": false
 }
