--- a/Runtime/com.bodardr.databinding.runtime.asmdef
+++ b/Runtime/com.bodardr.databinding.runtime.asmdef
@@ -2,7 +2,8 @@
     "name": "com.bodardr.databinding.runtime",
     "rootNamespace": "Bodardr.Databinding.Runtime",
     "references": [
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Unity.Localization"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -11,6 +12,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.localization",
+            "expression": "0",
+            "define": "UNITY_LOCALIZATION"
+        }
+    ],
     "noEngineReferences": false
 }
